--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 							common file formats, including shapefiles; the only requirement for use is <a
 								href="index.html#citation">acknowledgement</a>.</p>
 						<ul class="actions">
-							<li><a href="index.html#getdata" class="button big">Get the Data</a></li>
+							<li><a href="index.html#getdata" class="button big">Download the Data</a></li>
+							<li><a href="geoVis.html" class="button big">View the Data</a></li>
 						</ul>
 					</div>
 
@@ -171,45 +172,31 @@
 					<div class="posts">
 						<article>
 							<a href="downloadSimple.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<h3>Simplified Country Boundaries</h3>
-							<p>Download or view simplified versions of our data. These products are generally best
-								suited for data visualization, or larger-scale analyses where imprecision may matter
-								less (i.e., global or regional). You can download these boundaries across the entire
-								globe all at once for ADM0 to ADM2.</p>
+							<h3>Open License Data</h3>
+							<p>For users that require an open license: if you ever need to use the data in a public report, website, or to make your own modifications, you should start here.</p>
 							<ul class="actions">
-								<li><a href="downloadSimple.html" class="button fit small">Get Simplified Data</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="downloadCGAZ.html" class="image"><img src="images/smallWorld.jpg" alt="" /></a>
-							<h3>Global Country Boundaries</h3>
-							<p>Download or view every boundary in the world at ADM0, ADM1 and ADM2.  These products are based on our simplified country boundaries, and are best suited to visualization or large-scale (i.e., global) analysis.  If you are doing an analysis for one or a small number of countries, we recommend our country-specific datasets.</p>
-							<ul class="actions">
-								<li><a href="downloadCGAZ.html" class="button fit small">Get Global Data</a>
-								</li>
+								<li><a href="downloadOpen.html" class="button fit small">Get Open Data</a></li>
 							</ul>
 						</article>
 						<article>
 							<a href="downloadFull.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<h3>Full Precision Country Boundaries</h3>
-							<p>Download the highest resolution data we have available. Generally best for research or
-								analysis purposes by advanced users. Only one country boundary is available for download
-								at a time with our GUI (use of the <a href="api.html">API</a> can enable larger
-								analyses).</p>
+							<h3>Humanitarian Data</h3>
+							<p>The most recent UN OCHA COD boundaries, integrated with our most recent data for all countries.  Many licenses do not allow open use; thus, we recommend this data only for field humanitarian uses.</p>
 							<ul class="actions">
 								<li><a href="downloadFull.html" class="button fit small">Get Full Precision Data</a>
 								</li>
 							</ul>
 						</article>
 						<article>
-							<a href="api.html" class="image"><img src="images/api.jpg" alt="" /></a>
-							<h3>Programmatic / API Access</h3>
-							<p>Information on every geoBoundary since 2.0.0 - current and past - can be retrieved through a simple query; a JSON object is returned suitable for use in your programming language of choice.  Brief examples of API use are also provided.</p>
+							<a href="downloadCGAZ.html" class="image"><img src="images/smallWorld.jpg" alt="" /></a>
+							<h3>Global Country Boundaries</h3>
+							<p>An open license ADM0, ADM1 and ADM2 composite of the globe. If you are doing an analysis for one or a small number of countries, we recommend our country-specific datasets.</p>
 							<ul class="actions">
-								<li><a href="api.html" class="button fit small">API Documentation</a>
+								<li><a href="downloadCGAZ.html" class="button fit small">Get Global Data</a>
 								</li>
 							</ul>
 						</article>
+
 					</div>
 				</section>
 
@@ -222,7 +209,8 @@
 						</header>
 						<p><b>All we ask is an acknowledgement in any products you produce which use our data.</b> The
 							geoBoundaries team is primarily judged on it's citations: it is how our users, funders and
-							peers track our progress and impact. </p>
+							peers track our progress and impact. In most uses, you should cite two sources: geoBoundaries,
+						    and the underlying source we provide in the metadata for a given file. </p>
 
 						<div class="features">
 							<article>
