--- a/geoContrast.html
+++ b/geoContrast.html
@@ -330,7 +330,7 @@ ul li{
 				<!-- Banner -->
 				<section>
 					<header class="main">
-						<span><h1>Compare, Contribute, and <span 
+						<span><h1>Compare and <span 
 							data-text="Build Your Own Boundaries" 
 							class="tooltip"> BYOB</span></h1></span>
 						
