--- a/geoContrast.html
+++ b/geoContrast.html
@@ -328,9 +328,9 @@ ul li{
 				</header>
 
 				<!-- Banner -->
-				<section>
+				<section style="padding:2em 0 2em 0 !important;">
 					<header class="main">
-						<span><h1>Compare Boundaries</h1></span>
+						<span><h1>Visualize & Compare Boundaries</h1></span>
 						
 					</header>
 
@@ -623,49 +623,46 @@ ul li{
 		<!-- Sidebar -->
 		<div id="sidebar" , class="inactive">
 			<div class="inner">
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="index.html#getdata">Get Data</a></li>
-						<li><a href="api.html">API & Archive</a></li>
-						<li><a href="index.html#citation">Citation and Use</a></li>
-						<li><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0231866">Technical
-								Paper</a></li>
-						<li><a href="issues.html">Caveats & Roadmap</a></li>
-						<li>
-							<span class="opener">Get Involved</span>
-							<ul>
-								<li><a href="https://github.com/wmgeolab/geoBoundaries">GitHub Repository</a></li>
-								<li><a href="issues.html#contribute">Contribute Boundaries</a></li>
-								<li><a href="https://github.com/wmgeolab/geoBoundaries/issues">Report Issues</a></li>
-								<li><a href="https://giving.wm.edu/give-now/#allocation=4674">Buy us a Pizza</a></li>
-							</ul>
-						</li>
-
-
-					</ul>
-				</nav>
-
-
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<p>Want to contribute, identified an error, or otherwise want to chat? Please reach out!</p>
-					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">team@geoboundaries.org</a></li>
-						<li class="icon solid fa-phone">(757) 221-1970</li>
-						<li class="icon solid fa-home">geoLab, Applied Science<br />
-							540 Landrum Drive<br />
-							Williamsburg, VA 23185</li>
-					</ul>
-				</section>
-
+								<!-- Menu -->
+								<nav id="menu" style="padding:2em 0 0em 0 !important; margin:0em 0em 0em 0em;">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html#getdata">Download Data</a></li>
+										<li><a href="geoContrast.html">View Data</a></li>
+										<li><a href="api.html">API & Archive</a></li>
+										<li><a href="index.html#citation">Requirements for Use</a></li>
+										<li><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0231866">Technical
+												Paper</a></li>
+										<li><a href="https://github.com/wmgeolab/geoBoundaries/issues">Known Issues</a></li>
+										<li><a href="https://github.com/wmgeolab/geoBoundaries#getting-involved">Get Involved</a></li>
+									</ul>
+									<br />
+									<div id="mc_embed_signup">
+										<form
+											action="https://geoboundaries.us18.list-manage.com/subscribe/post?u=fa7c8b27d1a61c13a67dc3f25&amp;id=1415921471"
+											method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+											class="validate" target="_blank" novalidate>
+											<div id="mc_embed_signup_scroll">
+												<div class="mc-field-group">
+													<label style="margin-bottom:0em;">Subscribe to our Announcement List:</label>
+													<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+												</div>
+												<div id="mce-responses" class="clear">
+													<div class="response" id="mce-error-response" style="display:none"></div>
+													<div class="response" id="mce-success-response" style="display:none"></div>
+												</div>
+												<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+												<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+														name="b_fa7c8b27d1a61c13a67dc3f25_1415921471" tabindex="-1" value=""></div>
+												<div class="clear" style="margin-top:5px;"><input type="submit" value="Submit Email" name="subscribe"
+														id="mc-embedded-subscribe" class="button"></div>
+											</div>
+										</form>
+									</div>
+								</nav>
 				<!-- Footer -->
 				<footer id="footer">
 					<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>. <tiny>With respect to works
