Working through open API query limits; may swap to registered soon.

--- a/api.html
+++ b/api.html
@@ -98,8 +98,8 @@
 					   The returned elements are identical to those in the /current/ API endpoint.  
 					</p>
 
-					Of note, to facilitate speed of queries against
-					the API, all JSONs are pre-cached and can be exported in bulk by cloning the <a href="https://github.com/wmgeolab/gbWeb">geoBoundaries Website repository</a> for local use.
+					Of note, to facilitate speed of queries against the API, all JSONs are pre-cached and can be exported in bulk by cloning 
+					the <a href="https://github.com/wmgeolab/gbWeb">geoBoundaries Website repository</a> for local use.
 
 
 					</p>
