--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 						};
 						var tableA = new Tabulator("#dataTableRep", {
-							ajaxURL: "https://wmgeolab.github.io/gbWeb/api/current/gbOpen/ALL/ALL/index.json", //ajax URL
+							ajaxURL: "https://www.geoboundaries.org/api/current/gbOpen/ALL/ALL/", //ajax URL
 							height: screen.height * 0.60,
 							layout: "fitDataFill",
 							resizableColumns: false,
@@ -211,7 +211,7 @@
 								{ title: "Level", field: "boundaryType", visible: true, responsive: 0, headerFilter: "select" },
 								{ title: "License", field: "boundaryLicense", headerFilter: "select", headerFilterParams: { values: true }, visible: true, formatter: "textarea", width: "37%"},
 								//{title:"ID", field:"boundaryID", visible:true},
-								{ title: "Primary Source", field: "boundarySource-1", visible: true, formatter: "textarea", width: "37%" },
+								{ title: "Source", field: "boundarySource-1", visible: true, formatter: "textarea", width: "37%" },
 								{ title: "ShapefileURL", field: "downloadURL", visible: false },
 							]
 						});
